# ECE6122---Coursework

p1/: CMakeLists.txt  main.cc  main_test.cc
p1/src/: array.cc  array.h  simple_string.cc
p2/: CMakeLists.txt  dev_matrix.h  sample.conf  sample3D.conf  utils.h
p2/cly/: CMakeLists.txt  heat2D3Doutputo.csv  main.cu  main1.cu  main2  main_done.cu  mainnew  maino.cu  mains.cpp
se2/: CMakeLists(1).txt  CMakeLists.txt  PBS Script  a.out  a.out.80s-6052,coc-ice.pace.gatech.edu.btr  heat1Doutput.csv  main.cpp
sec1/: CMakeLists.txt  main.cpp
sec1/src/: vector3.cpp  vector3.h
